--- a/file1.html
+++ b/file1.html
@@ -2,7 +2,7 @@
 <html>
    <body style="background-color:rgb(250, 210, 210);">
       <h1>Welcome to Stack Simplify - File 1</h1>
-      <p>Azure Files Demo</p>
+      <p>Azure Files Demo 1</p>
       <p>Application Version: V1</p>
    </body>
 </html>
